# cblog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  cblog.toml  docker-compose.yml  readme.md
.claude/: cblog.md
.claude/skills/: cblog-dev-plugin.md  cblog-dev-theme.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dev-release.yml  release.yml
admin/static/: admin.css
admin/templates/: build.cbtml  dashboard.cbtml  login.cbtml  profile.cbtml
admin/templates/media/: upload.cbtml
admin/templates/pages/: form.cbtml
admin/templates/partials/: page-header.cbtml  pagination.cbtml  sidebar.cbtml
content/pages/: about.md
content/posts/: 2024-01-15-rust-blog-engine.md  2024-02-20-markdown-rendering.md  2024-03-10-cbtml-design.md
migrations/: 0001_init.sql  0002_site_settings.sql  0003_categories_tags.sql
plugins/cloud-storage/: main.lua  plugin.toml
plugins/cloud-storage/admin/: settings.cbtml
plugins/hello-world/: main.lua  plugin.toml
plugins/image-optimize/: main.lua  plugin.toml
plugins/search/: main.lua  plugin.toml
plugins/seo-optimizer/: main.lua  plugin.toml
plugins/syntax-highlight/: main.lua  plugin.toml
plugins/toc/: main.lua  plugin.toml
src/: admin.rs  build.rs  cbtml.rs  check.rs  config.rs  content.rs  init.rs  lua.rs  main.rs  media.rs  plugin.rs  repository.rs  state.rs
src/admin/: auth.rs  build.rs  categories.rs  cleanup.rs  csrf.rs  dashboard.rs  health.rs  install.rs  layout.rs  media.rs  pages.rs  plugins.rs  posts.rs  profile.rs  settings.rs  tags.rs  template.rs  theme.rs
src/cbtml/: codegen.rs  error.rs  filters.rs  lexer.rs  parser.rs
src/content/: excerpt.rs  frontmatter.rs  markdown.rs
src/lua/: hooks.rs  runtime.rs  sandbox.rs
src/media/: process.rs  upload.rs
src/plugin/: registry.rs  scheduler.rs  store.rs
src/repository/: auth.rs  build.rs  category.rs  media.rs  page.rs  post.rs  settings.rs  tag.rs
src/theme/: config.rs
themes/aurora/: theme.toml
themes/aurora/assets/admin/: admin.css  editor.js
themes/aurora/assets/js/: main.js
themes/aurora/assets/scss/: _variables.scss  main.scss
themes/aurora/templates/: 404.cbtml  archive.cbtml  base.cbtml  category.cbtml  index.cbtml  page.cbtml  post.cbtml  tag.cbtml
themes/aurora/templates/admin/: base.cbtml  build.cbtml  categories.cbtml  editor-base.cbtml  login.cbtml  plugin-page.cbtml  settings.cbtml  tags.cbtml  theme.cbtml
themes/aurora/templates/admin/media/: error.cbtml  list.cbtml
themes/aurora/templates/admin/pages/: form.cbtml  list.cbtml
themes/aurora/templates/partials/: footer.cbtml  nav.cbtml  pagination.cbtml  post-card.cbtml
(+8 files in other folders)
