[package]
name = "cblog"
version = "0.1.0"
edition = "2024"
description = "Rust + Lua 博客引擎：后台动态，前台全静态 SSG"

[dependencies]
# Web 框架 & 异步运行时
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# 模板引擎（cbtml 编译目标）
minijinja = { version = "2", features = ["loader"] }

# Markdown
pulldown-cmark = "0.12"

# Front Matter
gray_matter = "0.2"

# 并行
rayon = "1"

# ID 生成
ulid = { version = "1", features = ["serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 哈希
sha2 = "0.10"
md-5 = "0.10"

# 配置解析
toml = "0.8"

# 认证
jsonwebtoken = "9"
argon2 = "0.5"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# 文件监听（dev 模式）
notify = "7"

# 图片处理
image = "0.25"

# SCSS 编译
grass = "0.13"

# HTTP 中间件
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
